k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trips
  labels:
    name: trips
    app.kubernetes.io/part-of: trips-pipeline
